# tbank-mcp

./: .gitignore  AGENTS.md  FLOWS.md  LICENSE  README.md  TOOLS.md  login_cli.py  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json
skills/tbank-bill-pay/: SKILL.md
skills/tbank-bill-pay/evals/: evals.json
skills/tbank-budget-analyzer/: SKILL.md
skills/tbank-budget-analyzer/evals/: evals.json
skills/tbank-grocery-order/: SKILL.md
skills/tbank-grocery-order/evals/: evals.json
skills/tbank-invest-advisor/: SKILL.md
skills/tbank-invest-advisor/evals/: evals.json
skills/tbank-login/: SKILL.md
skills/tbank-login/evals/: evals.json
skills/tbank-transfer-money/: SKILL.md
skills/tbank-transfer-money/evals/: evals.json
src/: __init__.py  checkout.py  client.py  endpoints.py  journal.py  observability.py  server.py  tls.py
