[project]
name = "tbank-mcp"
version = "0.1.0"
description = "MCP server for the T-Bank (Т-Банк) mobile personal-banking API (capture-driven, headless, self-healing TLS)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.2",
  "requests>=2.32",
  "playwright>=1.40",
]

[project.scripts]
tbank-mcp = "src.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
